@@ -1,3 +1,9 @@
+2006-01-03  Derek Price  <derek@ximbiot.com>
+
+	* verify.c (verify): Accept -p option.
+	(verify_fileproc): Send signature to stdout with -p.
+	* sanity.sh (verify): Test `cvs verify -p'.
+
 2006-01-01  Derek Price  <derek@ximbiot.com>
 
 	* client.c (sig_cache): New static global.
